Fixed issue#1. Menu z-index

--- a/assets/themes/hooligan/_sass/_custom.scss
+++ b/assets/themes/hooligan/_sass/_custom.scss
@@ -75,6 +75,7 @@
 .navbar{
   position: fixed;  
   width: 100%;
+  z-index: 10;
 }
 
 .content{
